--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <div class="info">
           <h5 class="size3">THE JOY OF HOME OWNING</h5>
           <h3 class="size3">Find Your New Home</h3>
-          <div class="btn5"><a class="but4 main_button" href="#">Learn more</a></div>
-          
+          <div class="btn5">
+            <a class="but4 main_button" href="#">Learn more</a>
+          </div>
         </div>
       </div>
     </div>
